# persistence-common-object

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
dbus_config/: org.genivi.persistence.admin.conf
dbus_specifications/: org.genivi.persistence.admin.xml  org.genivi.persistence.admin_generate.txt
inc/private/: pers_ipc_dbus_if.h  pers_low_level_db_access_if.h
inc/protected/: persComDataOrg.h  persComDbAccess.h  persComErrors.h  persComIpc.h  persComRct.h  persComTypes.h
pkgconfig/: libperscommon.pc.in
src/: Makefile.am  pers_data_organization.c  pers_ipc.c  pers_ipc_dbus.c  pers_local_shared_db_access.c  pers_low_level_db_access.c  pers_resource_config_table.c
src/key-value-store/: crc32.c  crc32.h  pers_low_level_db_access.c
src/key-value-store/database/: kissdb.c  kissdb.h
src/key-value-store/hashtable/: qhash.c  qhash.h  qhasharr.c  qhasharr.h  qlibc.h
src/sqlite/: pers_low_level_db_access.c
test/: Makefile.am  pers_com_check.h  pers_com_test_base.h  persistence_common_object_test.c  test_pco_key_value_store.c
