#######################################################################################################################
#
# Copyright (C) 2012 Continental Automotive Systems, Inc.
#
# Author: Ana.Chisca@continental-corporation.com
#
# Makefile template for the persistence common library
#
# Process this file with automake to produce a Makefile.in.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
#######################################################################################################################

# Build trough subfolders. Make sure "generated" is called before "src".
ACLOCAL_AMFLAGS=-I m4
SUBDIRS = generated src

if WANT_TESTS
SUBDIRS+=test
endif
